# Simulations

./: .gitignore  3d.py  CMakeLists.txt  README.md  build.bat  build.sh  pendulum.py
include/core/: Application.h  Camera.h  Mesh.h  Shader.h  Window.h
include/input/: InputManager.h
include/physics/: Aircraft.h  FlightDynamics.h
include/renderer/: Renderer.h  SkyBox.h  Terrain.h
include/ui/: HUD.h
resources/shaders/: aircraft.frag  aircraft.vert  hud.frag  hud.vert
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Camera.cpp  Mesh.cpp  Shader.cpp  Window.cpp
src/input/: InputManager.cpp
src/physics/: Aircraft.cpp  FlightDynamics.cpp
src/renderer/: Renderer.cpp  SkyBox.cpp  Terrain.cpp
src/ui/: HUD.cpp
